--- a/.github/ISSUE_TEMPLATE/機能追加用.md
+++ b/.github/ISSUE_TEMPLATE/機能追加用.md
@@ -10,14 +10,13 @@ assignees: ''
 # なぜ必要か
 - 
 
-# 必要なこと
-- [ ] 
+# ブランチ名
+```
+feature/#
+```
 
-# やること（コードレベル）
+# 必要なこと
 - [ ] 
 
 # このissueで実装しないもの
 - 
-
-
-<!-- コメントアウト -->
