--- a/.github/ISSUE_TEMPLATE/機能追加用.md
+++ b/.github/ISSUE_TEMPLATE/機能追加用.md
@@ -1,9 +1,9 @@
 ---
 name: 機能追加用
 about: 機能追加用のissueテンプレート
-title: 'feat: '
-labels: ''
-assignees: ''
+title: "feat: "
+labels: ""
+assignees: ""
 
 ---
 
