--- a/config/locales/devise.views.ja.yml
+++ b/config/locales/devise.views.ja.yml
@@ -16,10 +16,10 @@ ja:
               confirmation: "が内容とあっていません。"
     attributes:
       user:
-        name: "名前"
-        email: "メールアドレス"
+        name: "ユーザーネーム"
+        email: "Eメール"
         password: "パスワード"
-        password_confirmation: "確認用パスワード"
+        password_confirmation: "パスワード(確認用)"
     models:
       user: "ユーザー"
 
